MDEV-24511 Assertion failed in Field::ptr_in_record on ALTER TABLE

Assertion `l_offset >= 0 && table->s->rec_buff_length - l_offset > 0'
 failed in Field::ptr_in_record and errno: 168 "Unknown (generic) error
 from engine" from InnoDB on ALTER.

This